zNotes 0.4.7:
* Fixed saving TODO-notes

zNotes 0.4.6:
* Use system icons theme (for Linux)
* Configurable toolbar icons size

zNotes 0.4.5:
* Fixed problems with creating and using notes directory on MeeGo
* Added Note Creation Dialog
* Added highlighting rules setup to configuration dialog
* Added action for editing command list
* Optimized source code
* Added slovak translation
* Added spanish translation

zNotes 0.4.4:
* Fixed segfault on removing last note
* HTTPS and FTP links may be highlighted now
* Added toolbar actions for navigation by history
* Fixed problem with note renaming
* Fixed problem with NoteTodo translation
* Added drag and drop support for toolbar items configuration dialog
* Major architectural changes

zNotes 0.4.3:
* Fixed problem with compilation on not UNIX systems
* Fixed problem with saving user language
* Fixed problem with unchecking search action on closing search bar
* Improved search usability

zNotes 0.4.2:
* Changed arhitecure of the note class
* Added picture format support
* Some ui improvements
* Added ability to change text color in html notes
* Added ability to use only one running instance of application.
* Added default notes directory for all platforms
* Added option for converting rich text insertions to plain text in HTML notes
* Fixed problem with saving last note's name
* Fixed bug with opening links in about dialog
* Fixed bug with the inability to edit notes content after unsuccessful search
* Added Brazilian Portuguese translation
* Added Ukranian translation
* Improved translations support

zNotes 0.4.1:
* Added automatic scaning for new files
* Some arhitecture changes
* Added ability to change tabbar position
* Added optional showing note's files extensions
* Added optional showing hidden files
* Improved toolbar editor
* Fixed bug with loading default settings
* Fixed bug with note's renaming
* Fixed bug with pasting formatted text to text note

zNotes 0.4.0:
* Major architectural changes