@@ -12,3 +12,4 @@ Pavel Fric <pavelfric@seznam.cz>
 Vadim Nekhai <onix@onix.name>
 Slavko Fedorik <slavino@slavino.sk>
 Jan Rimmek <jan@rimmek.de>
+Heimen Stoffels <vistausss@fastmail.com>
