@@ -1,3 +1,6 @@
+zNotes 0.4.8:
+* Added Dutch translation
+
 zNotes 0.4.7:
 * Fixed saving TODO-notes
 
